Changed scrollbar and fixed github page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,18 @@ html{
   font-family: 'Open Sans', sans-serif;
 
 }
+body::-webkit-scrollbar {
+  width: 7px;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #696969;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
 
 a {
   color: inherit;
